AUTO-345 Jenkins Deployinator Plugin
Beef up the command to have more information from deployinator in the Jenkins
build Cause.

--- a/src/main/resources/com/etsy/jenkins/cli/DeployinatorCommand/CLICommand/description.properties
+++ b/src/main/resources/com/etsy/jenkins/cli/DeployinatorCommand/CLICommand/description.properties
@@ -1,2 +1,2 @@
-started_by_command=Started by Deployinator for <a href="{1}">{0}</a><br/>Version: {2}
+started_by_command=Started by Deployinator for <a href="{1}">{0}</a><br/>Old Revision: {2}, New Revision: {3} <a href="{4}">diff</a>
 
