--- a/pom.xml
+++ b/pom.xml
@@ -31,5 +31,10 @@
       <artifactId>guice-assisted-inject</artifactId>
       <version>2.0</version>
     </dependency>
+    <dependency>
+      <groupId>org.jvnet.hudson.plugins</groupId>
+      <artifactId>build-pipeline-plugin</artifactId>
+      <version>1.1</version>
+    </dependency>
   </dependencies>
 </project>
