--- a/pom.xml
+++ b/pom.xml
@@ -34,7 +34,12 @@
     <dependency>
       <groupId>org.jvnet.hudson.plugins</groupId>
       <artifactId>build-pipeline-plugin</artifactId>
-      <version>1.1.2</version>
+      <version>1.2-SNAPSHOT</version>
+    </dependency>
+    <dependency>
+      <groupId>com.google.code.findbugs</groupId>
+      <artifactId>jsr305</artifactId>
+      <version>1.3.9</version>
     </dependency>
   </dependencies>
 </project>
