--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,10 @@
 
   <repositories>
     <repository>
+      <id>elblinkin-mvn-repo</id>
+      <url>https://github.com/elblinkin/mvn-repo/raw/master/snapshots/</url>
+    </repository>
+    <repository>
       <id>m.g.o-public</id>
       <url>http://maven.glassfish.org/content/groups/public/</url>
     </repository>
@@ -33,7 +37,7 @@
     </dependency>
     <dependency>
       <groupId>org.jvnet.hudson.plugins</groupId>
-      <artifactId>build-pipeline-plugin</artifactId>
+      <artifactId>modularized-build-pipeline-plugin</artifactId>
       <version>1.2-SNAPSHOT</version>
     </dependency>
     <dependency>
